<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/activity_main_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/orange">

        <TextView
            android:id="@+id/text_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_one"
            android:textColor="@color/pink"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_two"
            android:textColor="@color/pink"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_three"
            android:textColor="@color/pink"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2.7dp"
        android:layout_gravity="bottom"
        android:background="@color/orange"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/activity_main_image_view"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:scaleType="matrix"
            android:contentDescription="null" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/orange"></View>


    <android.support.v4.view.ViewPager
        android:id="@+id/activity_main_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:flipInterval="30"
        android:persistentDrawingCache="animation">

    </android.support.v4.view.ViewPager>

</LinearLayout>